doc: delete broken reference.
	* doc/specs/lang.tex: here.

--- a/doc/specs/lang.tex
+++ b/doc/specs/lang.tex
@@ -801,10 +801,10 @@ f2();
 
 The list of formal arguments defines the number of argument the
 function requires. They are accessible by their name from within the
-body, as shown in \autoref{lst:function-args}.  If the list of formal
-arguments is omitted, the number of effective arguments is not
-checked, and arguments themselves are not evaluated. Arguments can
-then be manipulated with the call message, explained below.
+body. If the list of formal arguments is omitted, the number of
+effective arguments is not checked, and arguments themselves are not
+evaluated. Arguments can then be manipulated with the call message,
+explained below.
 
 \begin{urbiscript}
 var f = function(a, b) {
