--- a/doc/specs/timeout.tex
+++ b/doc/specs/timeout.tex
@@ -1,6 +1,7 @@
 \section{Timeout}
 
-\dfn{Timeout} allow to tag some pieces of code which should be executed in limited time.
+\dfn{Timeout} allow to tag some pieces of code which should be
+executed in limited time.
 
 \subsection{Prototypes}
 \begin{itemize}
@@ -30,7 +31,8 @@ t:{
 [00000000] *** This code will execute.
 \end{urbiscript}
 
-Even if exception has been disabled in constructor, you can know if your piece of code has timed out or not using the member ``timedOut''.
+Even if exception has been disabled in constructor, you can know if
+your piece of code has timed out or not using the member ``timedOut''.
 
 \begin{urbiscript}
 t:sleep(350ms);
