doc: fixes and improvements.
	* doc/uobject/uobject.tex: here.
	* doc/urbi-report.sty: Define \var for all the languages.

--- a/doc/urbi-report.sty
+++ b/doc/urbi-report.sty
@@ -101,6 +101,8 @@
   captionpos=b,
   frame=single,
   showstringspaces=false,
+  % Always enable the use of \var{} in listings, including C++.
+  moredelim=[is][\ttfamily\itshape]{\\var\{}{\}},
 }
 
 % This is so that \lstinline corresponds to urbiScript code in normal
