--- a/doc/uobject/uobject.tex
+++ b/doc/uobject/uobject.tex
@@ -1,15 +1,15 @@
 \chapter{UObject Tutorial}
 
 This chapter guides you through the various steps of writing an \urbi
-C++ component using the UObject API. This API can be used to add new
-objects written in C++ to the \urbi language, and to interact from C++
+\Cxx component using the UObject API. This API can be used to add new
+objects written in \Cxx to the \urbi language, and to interact from \Cxx
 with the objects that are already defined. We cover the use cases of
 controlling a physical device (servomotor, speaker, camera...), and
 interfacing higher-lever components (voice recognition, object
 detection, ...) with \urbi.
 
 The API defines the UObject class. Each instance of a derived class in
-your C++ code will correspond to an \urbi object sharing some of its
+your \Cxx code will correspond to an \urbi object sharing some of its
 methods and attributes. The API provides methods to declare which
 elements of your object are to be shared. To share a variable with
 \urbi, you have to give it the type UVar. This type is a container that
@@ -36,39 +36,38 @@ method \lstinline{add} that returns the sum of this variable and its
 argument.
 
 \begin{itemize}
-\item{First the required include and namespace:}
+\item First the required include and namespace:
 
 \begin{cxx}
-#include <uobject.hh>
+#include <urbi/uobject.hh>
 \end{cxx}
 
-\item{Then we declare our \lstinline{adder} class:}
+\item Then we declare our \lstinline{adder} class:
 \begin{cxx}
-class adder : public urbi::UObject // must inherit from UObject
+class adder : public urbi::UObject // Must inherit from UObject.
 {
   public:
-     // the class must have a single constructor taking a string
-     adder (const std::string&);
+   // The class must have a single constructor taking a string.
+   adder (const std::string&);
 
-     // our variable
-     urbi::UVar v;
+   // Our variable.
+   urbi::UVar v;
 
-     // our method
-     double add (double);
+   // Our method.
+   double add (double);
 };
 \end{cxx}
-\item Finally the implementation of the constructor and our
-  \lstinline{add} method:
+\item The implementation of the constructor and our \lstinline{add}
+  method:
 \begin{cxx}
 // the constructor defines what is available from Urbi
 adder::adder (const std::string& s)
   : UObject (s) // required
 {
+  // Bind the variable.
+  UBindVar (adder, v);
 
-  // macro used to bind variables
-  UBindVar (adder,v);
-
-  // macro used to bind methods
+  // Bind the function.
   UBindFunction (adder, add);
 }
 
@@ -77,8 +76,10 @@ adder::add (double rhs)
 {
   return v + rhs;
 }
-
-// register the class to the Urbi kernel.
+\end{cxx}
+\item And register this class:
+\begin{cxx}
+// Register the class to the Urbi kernel.
 UStart (adder);
 \end{cxx}
 \end{itemize}
@@ -92,22 +93,23 @@ To summarize:
   string to the constructor of \lstinline{urbi::UObject}.
 \item Declare the variables you want to share with \urbi with the type
   \lstinline{urbi::UVar}.
-\item In the constructor, call \lstinline{UBindVar(classname,varname)}
+\item In the constructor, use the macros
+  \lstinline|UBindVar(\var{class-name}, \var{variable-name})|
   for each \lstinline{UVar} you want as an instance variable, and
-  \lstinline{UBindFunction(classname,functionname)} for each function
-  you want to bind.
-\item Don't forget to call the macro \lstinline{UStart} for each
-  object.
+  \lstinline|UBindFunction(\var{class-name}, \var{function-name})| for
+  each function you want to bind.
+\item Call the macro \lstinline{UStart} for each object.
 \end{itemize}
 
 \subsection{Creating new instances}
 
-When you start an \urbi server, an object of each class registered with
-\lstinline{UStart} is created with the same name as the class. New instances can
-be created from \urbi using the new command. For each instance created
-in \urbi, a corresponding instance of the C++ object is created. You
-can get the arguments passed to the constructor by defining and
-binding a method named init with the appropriate number of arguments.
+When you start an \urbi server, an object of each class registered
+with \lstinline{UStart} is created with the same name as the
+class. New instances can be created from \urbi using the
+\lstinline|new| method. For each instance created in \urbi, a
+corresponding instance of the \Cxx object is created. You can get the
+arguments passed to the constructor by defining and binding a method
+named \lstinline|init| with the appropriate number of arguments.
 
 \subsection{Notification of a variable change or access}
 
@@ -124,50 +126,49 @@ callback is called before the variable is accessed, giving you the
 possibility to update its value.
 
 \subsection{Timers}
+\label{sec:uob:timers}
 
 The API gives you two methods to have a function called periodically:
-
 \begin{itemize}
-\item{Calling \lstinline{USetUpdate (int period)} in your object sets
+\item Calling \lstinline{USetUpdate (int period)} in your object sets
   up a timer that calls the virtual \lstinline{UObject} method
-  \lstinline{update ()} with the specified period (in milliseconds)}
-\item{Calling \lstinline{USetTimer} passing the period in milliseconds
+  \lstinline{update ()} with the specified period (in milliseconds)
+\item Calling \lstinline{USetTimer} passing the period in milliseconds
   and a pointer to a method in your \lstinline{UObject} will call this
-  method at the specified period.}
+  method at the specified period.
 \end{itemize}
 
 \subsection{The special case of sensor/effector variables}
 
 In \urbi, a variable can have a different meaning depending on whether
-you are reading or writting it: you can use the same variable to
+you are reading or writing it: you can use the same variable to
 represent the target value of an effector and the current value
 measured by an associated sensor. This special mode is activated by
 the \lstinline{UObject} defining the variable by calling
 \lstinline{UOwned} after calling \lstinline{UBindVar}. This call has
 the following effects:
-
 \begin{itemize}
-\item{When \urbi code or code in other modules read the variable, they
-  read the current value.}
-\item{When \urbi code or code in other modules write the variable, they
-  set the target value.}
-\item{When the module that called UOwned reads the variable, it reads
-  the target value. When it writes the variable, it writes the current
-  value.}
+\item When \urbi code or code in other modules read the variable, they
+  read the current value.
+\item When \urbi code or code in other modules write the variable,
+  they set the target value.
+\item When the module that called \lstinline|UOwned| reads the
+  variable, it reads the target value. When it writes the variable, it
+  writes the current value.
 \end{itemize}
 
 \subsection{Using \urbi variables}
 
 You can read or write any \urbi variable by creating an
 \lstinline{UVar} passing the variable name to the constructor. Change
-the value by writting any compatible type to the \lstinline{UVar}, and
+the value by writing any compatible type to the \lstinline{UVar}, and
 access the value by casting the \lstinline{UVar} to any compatible
 type. However, some care must be taken in remote mode: changes on the
-variable coming from urbi code or an other module are only visible if
+variable coming from \urbi code or an other module are only visible if
 you have called \lstinline{UNotifyChange} on this variable. Otherwise
 the \lstinline{UVar} is not synchronized. Alternatively, in remote
 mode, you can get the value on demand by calling
-\lstinline{UNotifyOnRequest (variable, function)}. Then to get an
+\lstinline|UNotifyOnRequest (\var{variable}, \var{function})|. Then to get an
 updated value, call the \lstinline{requestValue} method on the
 \lstinline{UVar}, and your callback function will be called as soon as
 the value is available. You can read and write all the \urbi
@@ -180,30 +181,30 @@ appropriate \lstinline{UProp} object in the \lstinline{UVar}.
 provides specific structures for sound and images. The generic
 containers is called \lstinline{UBinary} and is defined in the
 \lstinline{urbi/uobject.hh} header. It contains an enum field type
-giving the type of the binary (UNKNOWN, SOUND or IMAGE), and an union
-of a \lstinline{USound} and \lstinline{UImage} struct containing a
-pointer to the data, the size of the data and type-specific
-metainformations. Reading a \lstinline{UBinary} from an
-\lstinline{UVar}, and writting a \lstinline{UBinary} to a
-\lstinline{UVar} performs a deep-copy of the data. In plugin mode, you
-can access directly the buffer used by the kernel by casting the
-\lstinline{UVar} to an \lstinline{UImage} or a \lstinline{USound}. You
-can then write to the buffer, but you can not change any other
-information.
+giving the type of the binary (\lstinline{UNKNOWN}, \lstinline{SOUND}
+or \lstinline{IMAGE}), and an union of a \lstinline{USound} and
+\lstinline{UImage} struct containing a pointer to the data, the size
+of the data and type-specific meta-information. Reading a
+\lstinline{UBinary} from a \lstinline{UVar}, and writing a
+\lstinline{UBinary} to a \lstinline{UVar} performs a deep-copy of the
+data. In plugin mode, you can access directly the buffer used by the
+kernel by casting the \lstinline{UVar} to an \lstinline{UImage} or a
+\lstinline{USound}. You can then write to the buffer, but you can not
+change any other information.
 
 \subsection{Using hubs to group objects}
 
 Sometimes, you need to perform actions for a group of
-\lstinline{UObjects}, for instances devices that need to be updated
+\lstinline{UObjects}, for instance devices that need to be updated
 together. The API provides the \lstinline{UObjectHub} class for this
 purpose. To create a hub, simply declare a subclass of
 \lstinline{UObjectHub}, and register it by calling once the macro
-\lstinline{UStartHub (classname)}. A single instance of this class
-will then be created upon server startup. \lstinline{UObject}
+\lstinline|UStartHub (\var{class-name})|. A single instance of this class
+will then be created upon server start-up. \lstinline{UObject}
 instances can then register to this hub by calling
-\lstinline{URegister (hubclassname)}. Timers can be attached to
+\lstinline|URegister (\var{hub-class-name})|. Timers can be attached to
 \lstinline{UObjectHub} the same way as to \lstinline{UObject} (see
-Timers section above). The kernel will call the \lstinline{update()}
+\autoref{sec:uob:timers}). The kernel will call the \lstinline{update()}
 method of all \lstinline{UObject} before calling the
 \lstinline{update()} method of the hub. A hub instance can be
 retrieved by calling \lstinline{getUObjectHub (string classname)}. The
@@ -214,8 +215,8 @@ attribute.
 
 If you need to send \urbi code to the server, the \lstinline{URBI()}
 macro is available, as well as the \lstinline{send()} function. You
-can either pass it a string, or directly \urbi code inside a couple of
-parenthesis:
+can either pass it a string, or directly \urbi code inside a pair of
+parentheses:
 
 \begin{urbiscript}
 send ("tag:1+1;");
@@ -225,21 +226,25 @@ URBI (( at (someevent (x)) { sometag:echo x; }; ));
 
 \section{Use cases}
 
-\subsection{Writting a servomotor device}
+\subsection{Writing a servomotor device}
 
 Let's write a \lstinline{UObject} for a servomotor device whose
 underlying API is:
 
 \begin{itemize}
-\item \lstinline{bool initialize (int id); //initialize the servomotor with given ID}
-\item \lstinline{double getPosition (int id); //read servomotor of given id position}
-\item \lstinline{void setPosition (int id, double pos); //send a command to servomotor}
-\item \lstinline{void setPID (int id, int p, int i, int d); //set PID arguments}
+\item \lstinline{bool initialize (int id)}\\
+  Initialize the servomotor with given ID.
+\item \lstinline{double getPosition (int id)}\\
+  Read servomotor of given id position.
+\item \lstinline{void setPosition (int id, double pos)}\\
+  Send a command to servomotor.
+\item \lstinline{void setPID (int id, int p, int i, int d)}\\
+  Set P, I, and D arguments.
 \end{itemize}
 
-First our header. Our servo device provides an attribute named \lstinline{val},
-the standard \urbi name, and two ways to set PID gain: a method, and
-three variables.
+First our header. Our servo device provides an attribute named
+\lstinline{val}, the standard \urbi name, and two ways to set PID
+gain: a method, and three variables.
 
 \begin{cxx}
 class servo : public urbi::UObject //must inherits UObject
@@ -263,11 +268,11 @@ public:
   urbi::UVar D;
 
   // callback for val change
-  int valueChanged(UVar &v);
+  int valueChanged(UVar& v);
   //callback for val access
-  int valueAccessed(UVar &v);
-  // callback for P I D change
-  int pidChanged(UVar &v);
+  int valueAccessed(UVar& v);
+  // callback for PID change
+  int pidChanged(UVar& v);
 
   // method to change all values
   void setPID(int p, int i, int d);
@@ -285,18 +290,18 @@ instances.
 servo::servo (const std::string& s)
   : urbi::UObject (s)
 {
-     // register init
-     UBindFunction (servo, init);
+   // register init
+   UBindFunction (servo, init);
 }
 \end{cxx}
 
 The \lstinline{init} function, called in a new instance each time a
-new \urbi instance is created, registers the three variables
+new \urbi instance is created, registers the four variables
 (\lstinline{val}, \lstinline{P}, \lstinline{I} and \lstinline{D}), and
 sets up callback functions.
 
 \begin{cxx}
-// Urbi constructor
+// Urbi constructor.
 int
 servo::init (int id)
 {
@@ -307,21 +312,21 @@ servo::init (int id)
 
   UBindVar (servo, val);
 
-  // val is both a sensor and an actuator
+  // val is both a sensor and an actuator.
   Uowned (val);
 
-  // set blend mode to mix
+  // Set blend mode to mix.
   val.blend = urbi::UMIX;
 
-  // register variables
+  // Register variables.
   UBindVar (servo, P);
   UBindVar (servo, I);
   UBindVar (servo, D);
 
-  // register functions
+  // Register functions.
   UBindFunction (servo, setPID);
 
-  // register callbacks on functions
+  // Register callbacks on functions.
   UNotifyChange (val, &servo::valueChanged);
   UNotifyAccess (val, &servo::valueAccessed);
   UNotifyChange (P, &servo::pidChanged);
@@ -335,26 +340,28 @@ servo::init (int id)
 Then we define our callback methods. \lstinline{servo::valueChanged}
 will be called each time the \lstinline{val} variable is modified,
 just after the value is changed: we use this method to send our servo
-command. \lstinline{servo::valueAccessed} is called just before the
+commands. \lstinline{servo::valueAccessed} is called just before the
 value is going to be read. In this function we request the current
 value from the servo, and set \lstinline{val} accordingly.
 
+\fixme{Check the body (we don't use v) and the comment in
+  valueAccessed}
 \begin{cxx}
-//called each time val is written to
+// Called each time val is written to.
 int
-servo::valueChanged (urbi::UVar & v)
+servo::valueChanged (urbi::UVar& v)
 {
-  // v is a ref. to val
+  // v is a reference to val.
   setPosition (id, (double)val);
 
   return 0;
 }
 
-// called each time val is read
+// Called each time val is read.
 int
-servo::valueAccessed(urbi::UVar & v)
+servo::valueAccessed (urbi::UVar& v)
 {
-  // v is a ref. to val
+  // v is a reference to val.
   val = getPosition (id);
 
   return 0;
@@ -365,9 +372,10 @@ servo::valueAccessed(urbi::UVar & v)
 variables is written to. The function \lstinline{servo::setPID} can be
 called directly from \urbi.
 
+\fixme{Why do we return 1 here?}
 \begin{cxx}
 int
-servo::pidChanged (urbi::UVar &v)
+servo::pidChanged (urbi::UVar& v)
 {
   setPID(id, (int)P, (int)I, (int)D);
 
@@ -383,82 +391,83 @@ servo::setPID (int p, int i, int d)
   D = d;
 }
 
-//register servo class to the Urbi kernel
+// Register servo class to the Urbi kernel.
 UStart (servo);
 \end{cxx}
 
 That's it, compile this module, and you can use it within \urbi:
 
 \begin{urbiscript}
-//creates a new instance, and calls init (1)
+// Create a new instance.  Calls init (1)
 headPan = new servo (1);
 
-//calls setPID ()
+// Calls setPID ().
 headPan.setPID (8,2,1);
 
-// calls valueChanged ()
-headPan.val=13;
+// Calls valueChanged ().
+headPan.val = 13;
 
-// calls valueAccessed ()
+// Calls valueAccessed ().
 headPan.val * 12;
 
-// periodically calls valueChanged ()
+// Periodically calls valueChanged ().
 headPan.val = 0 sin:1s ampli:20,
 
-// periodically calls valueAccessed ()
+// Periodically calls valueAccessed ().
 at (headPan.val < 0)
-  echo "left";
+  echo ("left");
 \end{urbiscript}
 
 The sample code above has one problem: \lstinline{valueAccessed} and
 \lstinline{valueChanged} are called each time the value is read or
 written from \urbi, which can happen quite often. This is a problem if
 sending the actual command (\lstinline{setPosition} in our example)
-takes time to execute. There are two solutions to this issue:
+takes time to execute. There are two solutions to this issue.
 
 \subsubsection{Caching}
 
 One solution is to remember the last time the value was read/written,
 and not apply the new command before a fixed time. Note that the
-kernel is doing this automatically for \lstinline{Uowned()}'d
-variables that are in a blend mode different than "normal". So the
+kernel is doing this automatically for \lstinline{UOwned}'d variables
+that are in a blend mode different than \lstinline{normal}. So the
 easiest solution to the above problem is likely to set the variable to
-the "mix" blending mode. The unavoidable drawback is that commands are
-not applied immediately, but only after a small delay.
+the \lstinline{mix} blending mode. The unavoidable drawback is that
+commands are not applied immediately, but only after a small delay.
 
 \subsubsection{Using timers}
 
 Instead of updating/fetching the value on demand, you can chose to do
 it periodically based on a timer. A small difference between the two
-API methods comes in handy for this case: the \lstinline{update()} virtual method
-called periodically after being set up by \lstinline{USetUpdate(interval)} is
-called just after one pass of \urbi code execution, whereas the timers
-set up by \lstinline{USetTimer} are called just before one pass of \urbi code
+API methods comes in handy for this case: the \lstinline{update()}
+virtual method called periodically after being set up by
+\lstinline{USetUpdate(interval)} is called just after one pass of
+\urbi code execution, whereas the timers set up by
+\lstinline{USetTimer} are called just before one pass of \urbi code
 execution. So the ideal solution is to read your sensors in the second
 callback, and write to your actuators in the first. Our previous
-example (ommiting PID handling for clarity) can be rewritten. The
+example (omitting PID handling for clarity) can be rewritten. The
 header becomes:
 
 \begin{cxx}
-// inherits from UObject
+// Inherit from UObject.
 class servo : public urbi::UObject
 {
 public:
-  //the class must have a single constructor taking a string
+  // The class must have a single constructor taking a string.
   servo (const std::string&)
 
-  // Urbi constructor
+  // Urbi constructor.
   int init (int id);
 
-  // called periodically
+  // Called periodically.
   virtual int update ();
-  // called periodically
+  // Called periodically.
   int getVal ();
 
-  // our position variable
+  // Our position variable.
   urbi::UVar val;
 
-  // motor ID
+  // Motor ID.
   int id_;
 };
 \end{cxx}
@@ -466,22 +475,22 @@ public:
 Constructor is unchanged, \lstinline{init} becomes:
 
 \begin{cxx}
+// Urbi constructor.
 int
 servo::init (int id)
 {
-  // urbi constructor
   id_ = id;
 
   if (!initialize (id))
     return 0;
 
   UBindVar (servo,val);
-  //val is both a sensor and an actuator
+  // Val is both a sensor and an actuator.
   UOwned(val);
 
-  // will call update () periodically
+  // Will call update () periodically.
   USetUpdate(1);
-  // idem for getVal ()
+  // Idem for getVal ().
   USetTimer (1, &servo::getVal);
 
   return 0;
@@ -493,28 +502,34 @@ servo::init (int id)
 called on demand, they are now called periodically. The period of the
 call cannot be lower than the server period (which is chosen when
 starting the robot, or fixed by the underlying architecture), so you
-can set it to 0 to mean "as fast as is usefull".
+can set it to 0 to mean ``as fast as is useful''. \fixme{Adjust this
+  to the lack of period in k2.}
+
 
 \subsection{Using hubs to group objects}
 
 Now, suppose that, for our previous example, we can speed things up by
-sending all the servomotor commands at the same time, using the method
-\lstinline{setPositions(int count, int *ids, double * positions)} that
-takes two arrays of ids and positions. A hub is the perfect way to
-handle this task. The UObject header stays the same. We add a hub
-declaration:
+sending all the servomotor commands at the same time, using the
+following method that takes two arrays of ids and positions.
+
+\begin{cxx}
+void setPositions(int count, int* ids, double* positions);
+\end{cxx}
+
+A hub is the perfect way to handle this task. The UObject header stays
+the same. We add a hub declaration:
 
 \begin{cxx}
 class servohub : public urbi::UObjectHub
 {
 public:
-  //the class must have a single constructor taking a string
+  // The class must have a single constructor taking a string.
   servohub (const std::string&);
 
-  // called periodically
+  // Called periodically.
   virtual int update ();
 
-  // called by servo
+  // Called by servo.
   void addValue (int id, double val);
 
   int* ids;
@@ -542,7 +557,7 @@ although it has no use in our specific example:
 URegister(servohub);
 \end{cxx}
 
-Finaly, the implementation of our hub methods is:
+Finally, the implementation of our hub methods is:
 
 \begin{cxx}
 servohub::servohub (const std::string& s)
@@ -559,10 +574,10 @@ servohub::servohub (const std::string& s)
 int
 servohub::update ()
 {
-  // called periodically
+  // Called periodically.
   setPositions (count, ids, vals);
 
-  // reset position counter
+  // Reset position counter.
   count = 0;
 
   return 0;
@@ -573,9 +588,9 @@ servohub::addValue (int id, double val)
 {
   if (count + 1 < size)
   {
-    // allocate more memory
-    ids = (int*)realloc (ids, (count + 1) * sizeof (int);
-    vals = (double*)realloc (vals, (count + 1) * sizeof (double);
+    // Allocate more memory.
+    ids = (int*) realloc (ids, (count + 1) * sizeof (int));
+    vals = (double*) realloc (vals, (count + 1) * sizeof (double));
     size = count + 1;
   }
   ids[count] = id;
@@ -594,78 +609,78 @@ command and resetting the array.
 
 Alternatively, to demonstrate the use of the members hub variable, we
 can entirely remove the \lstinline{update} method in the servo class
-(and the \lstinline{USetUpdate()} call in init), and rewrite the hub
-\lstinline{update} method the following way:
+(and the \lstinline{USetUpdate()} call in \lstinline{init}), and
+rewrite the hub \lstinline{update} method the following way:
 
 \begin{cxx}
 int servohub::update()
 {
   //called periodically
-  for (UObjectList::iterator it = members.begin ();
-       it != members.end ();
-       it++)
-  {
-    addValue (((servo*)*it)->id,
-              (double)((servo*)*it)->val);
-  }
+  for (UObjectList::iterator i = members.begin ();
+       i != members.end ();
+       ++i)
+    addValue (((servo*)*i)->id, (double)((servo*)*i)->val);
   setPositions(count, ids, vals);
   // reset position counter
-  count=0;
+  count = 0;
 
   return 0;
 }
 \end{cxx}
 
-\subsection{Writting a camera device}
+\subsection{Writing a camera device}
 
 A camera device is an UObject whose \lstinline{val} field is a binary
-object. The \urbi kernel itself doesn't differenciate between all the
-possible binary formats and data type, but the API provides
-image-specfic structures for conveniance. You must be careful about
-memory managment. The \lstinline{UBinary} structure handles its own
-memory: copies are deep copies, and the destructor frees the
-associated buffer. The \lstinline{UImage} and \lstinline{USound}
-structures do not.
+object. The \urbi kernel itself doesn't make any difference between
+all the possible binary formats and data type, but the API provides
+image-specific structures for convenience. You must be careful about
+memory management. The \lstinline{UBinary} structure handles its own
+memory: copies are deep, and the destructor frees the associated
+buffer. The \lstinline{UImage} and \lstinline{USound} structures do
+not.
 
 Let's suppose we have an underlying camera API with the following functions:
-
 \begin{itemize}
-\item{\lstinline{bool initialize (int id); // initialize the camera with given ID}}
-\item{\lstinline{int getWidth (int id); // read image width}}
-\item{\lstinline{int getHeight (int id); // read image height}}
-\item{\lstinline{char* getImage (int id); // get image buffer of format RGB24.}
-  The buffer returned is always the same and doesn't have to be freed.}
+\item \lstinline{bool initialize (int id)}\\
+  Initialize the camera with given ID.
+\item \lstinline{int getWidth (int id)}\\
+  Return image width.
+\item \lstinline{int getHeight (int id)}\\
+  Return image height.
+\item \lstinline{char* getImage (int id)}\\
+  Get image buffer of format RGB24.  The buffer returned is always the
+  same and doesn't have to be freed.
 \end{itemize}
 
-Our device code can be written as follows:
-
+Our device code can be written as follows: \fixme{There is a trailing
+  UBinary bin in the last comment.}
 \begin{cxx}
-//inherit from UObject
+// Inherit from UObject.
 class Camera : public urbi::UObject
 {
 public:
-  // the class must have a single constructor taking a string
+  // The class must have a single constructor taking a string.
   Camera(const std::string&);
 
-  // Urbi constructor
+  // Urbi constructor.
   int init (int id);
 
-  // our image variable and dimensions
+  // Our image variable and dimensions.
   urbi::UVar val;
   urbi::UVar width;
   urbi::UVar height;
 
-  // called on access
-  int getVal (UVar &);
+  // Called on access.
+  int getVal (UVar&);
 
-  // called periodically
+  // Called periodically.
   virtual int update ();
 
-  //frame counter for caching
+  // Frame counter for caching.
   int frame;
-  //frame number of last access
+  // Frame number of last access.
   int accessFrame;
-  //camera id UBinary bin;
+  // Camera id UBinary bin;
   int id_;
 };
 \end{cxx}
@@ -673,18 +688,16 @@ public:
 The constructor only registers \lstinline{init}:
 
 \begin{cxx}
-//the constructor registers init only
 Camera::Camera (const std::string& s)
-  : urbi::UObject (s),
-    frame (0)
+  : urbi::UObject (s)
+  , frame (0)
 {
-  // register init
   UBindFunction (Camera, init);
 }
 \end{cxx}
 
 The \lstinline{init} function binds the variable, a function called on
-access, and sets a timer up on update. It also initialises the
+access, and sets a timer up on update. It also initializes the
 \lstinline{UBinary} structure.
 
 \begin{cxx}
@@ -699,21 +712,21 @@ Camera::init (int id)
   if (!initialize (id))
     return 0;
 
-  UBindVar (Camera,val);
-  UBindVar (Camera,width);
-  UBindVar (Camera,height);
+  UBindVar (Camera, val);
+  UBindVar (Camera, width);
+  UBindVar (Camera, height);
   width = getWidth (id);
   height = getHeight (id);
 
   UNotifyAccess (val, &Camera::getVal);
 
-  bin.type=BINARY_IMAGE;
+  bin.type = BINARY_IMAGE;
   bin.image.width = width;
   bin.image.height = height;
   bin.image.imageFormat = IMAGE_RGB;
   bin.image.size = width * height * 3;
 
-  //will call update () periodically
+  // Call update () periodically.
   USetUpdate (1);
 
   return 0;
@@ -726,25 +739,25 @@ The \lstinline{update} function simply updates the frame counter:
 int
 Camera::update ()
 {
-  frame++;
+  ++frame;
   return 0;
 }
 \end{cxx}
 
 The \lstinline{getVal} updates the camera value, only if it hasn't
 already been called this frame, which provides a simple caching
-mechanism to avoid performing the potentially lenghty operation of
+mechanism to avoid performing the potentially long operation of
 acquiring an image too often.
 
 \begin{cxx}
 int
-Camera::getVal(urbi::UVar &)
+Camera::getVal(urbi::UVar&)
 {
   if (frame == accessFrame)
     return 1;
 
   bin.image.data = getImage (id);
-  //assign image to bin
+  // Assign image to bin.
   val = bin;
 }
 
@@ -761,23 +774,23 @@ after assigning the \lstinline{UBinary} to the \lstinline{UVar}.
 \subsubsection{Optimization in plugin mode}
 
 In plugin mode, it is possible to access the buffer used by the kernel
-by casting the \lstinline{UVar} to a \lstinline{UImage}. You can modify the content of the
-kernel buffer but no other argument.
+by casting the \lstinline{UVar} to a \lstinline{UImage}. You can
+modify the content of the kernel buffer but no other argument.
 
-\subsection{Writting a speaker or microphone device}
+\subsection{Writing a speaker or microphone device}
 
 Sound handling works similarly to image manipulation, the
 \lstinline{USound} structure is provided for this purpose. The
-recommanded way to implement a microphone is to fill the
+recommended way to implement a microphone is to fill the
 \lstinline{UObject} val variable with the sound data corresponding to
-one kernel period. If you do so, the urbi code \lstinline{loop tag:micro.val,}
-will produce the expected result.
+one kernel period. If you do so, the \urbi code \lstinline{loop
+  tag:micro.val,} will produce the expected result.
 
-\subsection{Writting a softdevice: ball detection}
+\subsection{Writing a softdevice: ball detection}
 
-Algorithms that require intense computation can be written in C++ but
-still be useable within \urbi: they acquire their data using
-\lstinline{UVar} referencing other modules's variables, and output
+Algorithms that require intense computation can be written in \Cxx but
+still be usable within \urbi: they acquire their data using
+\lstinline{UVar} referencing other modules' variables, and output
 their results to other \lstinline{UVar}. Let's consider the case of a
 ball detector device that takes an image as input, and outputs the
 coordinates of a ball if one is found.
@@ -785,20 +798,16 @@ coordinates of a ball if one is found.
 The header is defined like:
 
 \begin{cxx}
-// inherit from UObject
 class BallTracker : public urbi::UObject
 {
 public:
-  //the class must have a single constructor taking a string
   BallTracker (const std::string&);
-
-  // Urbi constructor
   int init (const std::string& varname);
 
-  // is the ball visible ?
+  // Is the ball visible?
   urbi::UVar visible;
 
-  // ball coordinates
+  // Ball coordinates.
   urbi::UVar x;
   urbi::UVar y;
  };
@@ -807,11 +816,10 @@ public:
 The constructor only registers \lstinline{init}:
 
 \begin{cxx}
-//the constructor registers init only
+// The constructor registers init only.
 BallTracker::BallTracker (const::string& s)
   : urbi::UObject (s)
 {
-  //register init
   UBindFunction (BallTracker, init);
 }
 \end{cxx}
@@ -839,7 +847,7 @@ image in its argument, and updates the variables.
 
 \begin{cxx}
 int
-BallTracker::newImage (urbi::UVar &v)
+BallTracker::newImage (urbi::UVar& v)
 {
   //cast to UImage
   urbi::UImage i = v;
@@ -858,3 +866,14 @@ BallTracker::newImage (urbi::UVar &v)
   return 0;
 }
 \end{cxx}
+
+% LocalWords:  UObject API UVar UBinary USound UImage liburbi UValue namespace
+% LocalWords:  urbi const UBindVar UBindFunction rhs UStart init UNotifyChange
+% LocalWords:  UNotifyAccess notifyChange notifyAccess USetUpdate USetTimer pos
+% LocalWords:  UOwned UNotifyOnRequest requestValue UProp enum struct plugin px
+% LocalWords:  UObjects UObjectHub UStartHub URegister getUObjectHub classname
+% LocalWords:  someevent sometag bool getPosition setPosition setPID PID Uowned
+% LocalWords:  valueChanged valueAccessed pidChanged headPan ampli getVal vals
+% LocalWords:  setPositions servohub addValue realloc sizeof destructor RGB py
+% LocalWords:  getWidth getHeight getImage accessFrame softdevice BallTracker
+% LocalWords:  varname cameraval newImage detectBall
