--- a/doc/urbi-sdk.tex
+++ b/doc/urbi-sdk.tex
@@ -24,21 +24,26 @@
 \tableofcontents
 
 \part{Urbi SDK Tutorial}
+\label{part:tut}
 \input{tutorial/tutorial}
 
 
 \part{Installation}
+\label{part:install}
 \input{installation}
 
 \part{Guidelines and Cook Books}
+\label{part:guide}
 \input{faq}
 \input{k1-to-k2}
 
 \part{Urbi SDK Specifications}
+\label{part:specs}
 \input{specs/specs}
 \input{uobject/uobject}
 
 \part{References and Index}
+\label{part:ref}
 
 \phantomsection % otherwise hyperlinks to previous chapter.
 \addcontentsline{toc}{chapter}{\indexname}
