--- a/doc/installation.tex
+++ b/doc/installation.tex
@@ -13,7 +13,7 @@ where
   using.  It can be simple, \code{2.0}, or more complex,
   \code{2.0-beta3-137-g28f8880}.  In that case,
   \begin{description}
-  \item[2.0] is the version of the UrbiScript Kernel,
+  \item[2.0] is the version of the urbiScript Kernel,
   \item[beta3] designates the third prerelease,
   \item[137] is the number of changes since beta3 (not counting
     changes in sub-packages),
