--- a/doc/specs/lang.tex
+++ b/doc/specs/lang.tex
@@ -263,7 +263,7 @@ content is printed with echo for instance.
 [00000000] ""
 "foo";
 [00000000] "foo"
-"a\nb"; // UrbiScript escapes string when dumping them
+"a\nb"; // urbiScript escapes string when dumping them
 [00000000] "a\nb"
 echo("a\nb"); // We can see there is an actual line feed
 [00000000] *** a
