--- a/doc/urbi-report.sty
+++ b/doc/urbi-report.sty
@@ -7,7 +7,7 @@
 %% ---------- %%
 
 % Margin width chosen so that 80 columns are displayed in listings.
-% This is needed to display nicely the banner of UrbiScript
+% This is needed to display nicely the banner of urbiScript
 % interactive sessions.
 \RequirePackage[a4paper,hmargin=2.5cm]{geometry}
 
@@ -40,7 +40,7 @@
 \newcommand{\sdk}{SDK\xspace}
 \newcommand{\umake}{umake\xspace}
 \newcommand{\urbi}{Urbi\xspace}
-\newcommand{\us}{UrbiScript\xspace}
+\newcommand{\us}{urbiScript\xspace}
 
 %% -------- %%
 %% Floats.  %%
