--- a/doc/specs/string.tex
+++ b/doc/specs/string.tex
@@ -27,7 +27,7 @@ String;
 \item \lstinline|asFloat|\\
   If the whole content of \lstinline|this| is an integer, return its
   value, otherwise return an error.
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 "23.03".asFloat;
 [00000000] 23.03
 
@@ -39,7 +39,7 @@ String;
   Return a List of one-letter Strings that, concataneted, equal
   \lstinline|this|.  This allows to use \lstinline|for| to iterate
   over the string.
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 "123".asList;
 [00000001] ["1", "2", "3"]
 for (var v : "123")
@@ -51,7 +51,7 @@ for (var v : "123")
 
 \item \lstinline|asPrintable|\\
   Return \lstinline|this| as a literal (escaped) string.
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 "foo".asPrintable;
 [00000000] "\"foo\""
 "foo".asPrintable.asPrintable;
@@ -60,7 +60,7 @@ for (var v : "123")
 
 \item \lstinline|asString|\\
   Return \lstinline|this|.
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 "\"foo\"".asString;
 [00000000] "\"foo\""
 \end{urbiscript}
@@ -71,7 +71,7 @@ for (var v : "123")
   {Damerau-Levenshtein distance} between \lstinline|this| and
   \var{other}.  The more alike the strings are, the smaller the
   distance is.
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 assert("foo".distance("foo") == 0);
 assert("bar".distance("baz") == 1);
 assert("foo".distance("bar") == 3);
@@ -81,7 +81,7 @@ assert("foo".distance("bar") == 3);
   Return a String that has never been used as an identifier, prefixed
   by \lstinline|this|.  It can safely be used with
   \lstinline|Object.setSlot| and so forth.
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 String.fresh;
 [00000000] "_5"
 "foo".fresh;
@@ -92,7 +92,7 @@ String.fresh;
   Replace every occurrence of the string \var{from} in
   \lstinline|this| by \var{to}, and return the result.
   \lstinline|this| is not modified.
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 assert("Hello, World!".replace("Hello", "Bonjour")
                       .replace("World!", "Monde !")
        == "Bonjour, Monde !");
@@ -100,7 +100,7 @@ assert("Hello, World!".replace("Hello", "Bonjour")
 
 \item \lstinline|size|\\
   Return the size of the string.
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 assert("foo".size == 3);
 assert("".size == 0);
 \end{urbiscript}
@@ -108,14 +108,14 @@ assert("".size == 0);
 \item \lstinline|toLower|\\
   Make lower case every upper case character in \lstinline|this| and
   return the result.  \lstinline|this| is not modified.
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 assert("Hello, World!".toLower == "hello, world!");
 \end{urbiscript}
 
 \item \lstinline|toUpper|\\
   Make upper case every lower case character in \lstinline|this| and
   return the result.  \lstinline|this| is not modified.
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 assert("Hello, World!".toUpper == "HELLO, WORLD!");
 \end{urbiscript}
 
@@ -127,14 +127,14 @@ assert("Hello, World!".toUpper == "HELLO, WORLD!");
 %  powerful than this, since it relies on
 %  \href{http://www.boost.org/doc/libs/1_39_0/libs/format/doc/format.html,
 %    Boost.Format}.  For instance:
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 "%s + %s = %s" % [1, 2, 3];
 [00000000] "1 + 2 = 3"
 \end{urbiscript}
 
 \item \lstinline|* \var{n}|\\
   Return the concatentation of \lstinline|this| \var{n} times.
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 assert("foo" * 0 == "");
 assert("foo" * 1 == "foo");
 assert("foo" * 3 == "foofoofoo");
@@ -143,7 +143,7 @@ assert("foo" * 3 == "foofoofoo");
 \item \lstinline|+ \var{other}|\\
   Return the concatenation of \lstinline|this| and
   \lstinline|\var{other}.asString|.
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 assert("foo" + "bar" == "foobar");
 assert("foo" + "" == "foo");
 assert("foo" + 3 == "foo3");
@@ -153,7 +153,7 @@ assert("foo" + [1, 2, 3] == "foo[1, 2, 3]");
 \item \lstinline|< \var{other}|\\
   Whether \lstinline|this| is lexicographically before \var{other},
   which must be a String.
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 assert("" < "a");
 assert(!("a" < ""));
 assert("a" < "b");
@@ -164,7 +164,7 @@ assert(!("a" < "a"));
   \lstinline|[\var{from}, \var{to}]|\\
   Return the substring starting at \var{from}, up to and not including
   \var{to} (which defaults to \var{to} + 1).
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 assert("foobar"[0, 3], "foo");
 assert("foobar"[0], "b");
 \end{urbiscript}
@@ -177,7 +177,7 @@ assert("foobar"[0], "b");
 
   Beware that this routine is imperative: it changes the value of
   \lstinline|this|.
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 var s1 = "foobar" | var s2 = s1 |
 assert(s1[0, 3] = "quux", "quux");
 assert(s1, "quuxbar");
